fix: played card causing overflow of playertable

--- a/mate.css
+++ b/mate.css
@@ -61,7 +61,6 @@
 
 .mate_playertable {
   text-align: center;
-  width: 100px;
   height: 110px;
 }
 
